--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
+    "axios": "^1.8.4",
+    "get-port": "^7.1.0",
     "socket.io-client": "^4.8.1"
   },
   "name": "client",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
